HomeWork13 IoC Container ver2